--- a/test1/main.html
+++ b/test1/main.html
@@ -9,6 +9,10 @@
 	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width">
 </head>
 <body>
+<!--header on top-->
+<div class="header">
+	Zodiac
+</div>
 <!--information card page-->
 <div id="infocard">
 	<div class="infoheader">
@@ -18,7 +22,9 @@
 	<div id="info">
 	</div>
 </div>
-<div id="infocardbg"></div>
+<!--information card page end-->
+<div id="infocardbg"></div><!--background of infocard-->
+<div class="blank"></div>
 <!--img begin-->
 <div class="imgcontainer">
 	<img src="img/zodiac-rat.png" alt="" id="p0" onclick="clickfun(0)" title="Rat">
