--- a/myhome.html
+++ b/myhome.html
@@ -127,16 +127,16 @@
 </table>
 </div>
 <!--timetable end-->
-<div class="bottombutton join" onclick="window.location.href='Exercise2'">
+<div class="bottombutton join" onclick="window.location.href='Exercise2/'">
     Join my Company
 </div>
-<div class="bottombutton calculator" onclick="window.location.href='calculator'">
+<div class="bottombutton calculator" onclick="window.location.href='calculator/'">
     Calculator
 </div>
-<div class="bottombutton calculator" onclick="window.location.href='calculator4'">
+<div class="bottombutton calculator" onclick="window.location.href='calculator4/'">
     Week4 Calculator
 </div>
-<div class="bottombutton flight" onclick="window.location.href='flight'">
+<div class="bottombutton flight" onclick="window.location.href='flight/'">
     Seat Selection
 </div>
 <div id="footer" class="textcenter">
