--- a/html5/cart.html
+++ b/html5/cart.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cart</title>
     <style>
         .container{
             margin:auto;
-            width: 60%;
+            width: 80%;
             text-align: center;
         }
         .books{
@@ -15,16 +15,29 @@
             height: 300px;
         }
         img{
-            width: 60%;
+            width: 100%;
         }
         .books img{
             width: 25%;
         }
         #cart{
             width: 50%;
+            margin-top: 100px;
         }
         .status{
             height: 20px;
+        }
+        table{
+            width: 100%;
+            height: 100%;
+        }
+        td{
+            height: 100%;
+            width: 25%;
+            background-color: sandybrown;
+        }
+        th{
+            background-color: burlywood;
         }
     </style>
     <script>
@@ -32,7 +45,7 @@
         var intDeleNum = 0;
         function init()
         {
-            var drag = document.getElementsByTagName("img");
+            var drag = document.getElementsByClassName("book");
             for(var i = 0;i<drag.length;i++)
             {
                 drag[i].addEventListener("dragstart",function(e){
@@ -61,19 +74,27 @@
             var node = document.getElementById(id);
             node.parentNode.removeChild(node);
             intDeleNum+=price[parseInt(id)-1];
-            document.getElementById("status").innerHTML = intDeleNum;
+            document.getElementById("status").innerHTML = "<b>$"+intDeleNum+"</b>";
         }
     </script>
 </head>
 <body onload="init()">
  <div class="container">
-     <div class="books">
-         <img src="book.png" alt="" draggable="true" id="1">
-         <img src="book.png" alt="" draggable="true" id="2">
-         <img src="book.png" alt="" draggable="true" id="3">
-         <img src="book.png" alt="" draggable="true" id="4">
+     <div class="books"><table><tr>
+         <td><img src="life.jpg" alt="" draggable="true" id="1" class="book"></td>
+         <td><img src="Jiang.jpg" alt="" draggable="true" id="2" class="book"></td>
+         <td><img src="Wallace1.jpg" alt="" draggable="true" id="3" class="book"></td>
+         <td><img src="fight.jpg" alt="" draggable="true" id="4" class="book"></td>
+     </tr>
+         <tr>
+             <th>$10</th>
+             <th>$22</th>
+             <th>$66</th>
+             <th>$88</th>
+         </tr>
+     </table>
      </div>
-     <img src="cart.png" alt="" id="cart">
+     <img src="cart.png" alt="" id="cart" style="width: 30%">
      <div class="status"><p id="status"></p></div>
  </div>
 </body>
