--- a/html5/findersmile.html
+++ b/html5/findersmile.html
@@ -9,18 +9,11 @@
             margin:0 auto;
             text-align:center;
         }
-        div.title {
-            font-size: 40px;
-            font-family:monospace;
-        }
-        canvas {
-        }
     </style>
 </head>
 <body>
 <div id="main">
-    <canvas height="600" width="600" id="face" style="background-color:pink">
-        <p>You need canvas!</p>
+    <canvas height="600" width="600" id="face" style="background-color: #eee">
     </canvas>
 </div>
 <script>
@@ -34,17 +27,9 @@
     function initFace() {
         canvas = document.getElementById("face");
         context = canvas.getContext("2d");
-
         c_width = canvas.offsetWidth;
         c_height = canvas.offsetHeight;
-
         //draw the face
-        drawSmileyFace();
-    }
-
-    function drawSmileyFace() {
-        drawSmile();
-        drawhhh();
         drawFace();
         drawLeftEye();
         drawRightEye();
@@ -53,15 +38,6 @@
     function drawFace() {
         // face
         context.beginPath();
-        /*context.arc(c_width/2,   // x   x,y is at the center
-            c_height/2,   // y
-            200,      // arc radius
-            0,         // starting angle
-            degreesToRadians(360), // ending angle
-            true);        // counter-clockwise
-        context.fillStyle = "yellow";
-        context.fill();
-        context.stroke();*/
         context.moveTo(50,150);
         context.lineTo(550,150);
         context.lineTo(550,450);
@@ -72,11 +48,21 @@
         context.moveTo(300,150);
         context.lineTo(250,300);
         context.lineTo(330,300);
-        context.lineTo(360,450);
+        context.arc(500,268,200,degreesToRadians(120),degreesToRadians(170),false);
         context.fillStyle='deepskyblue';
         context.fill();
         context.strokeStyle='#000';
         context.lineWidth=5;
+        context.stroke();
+        context.closePath();
+        context.beginPath();
+        context.moveTo(304,300);
+        context.lineTo(330,300);
+        context.lineTo(397,435);
+        context.fillStyle='deepskyblue';
+        context.fill();
+        context.strokeStyle='deepskyblue';
+        context.lineWidth=6;
         context.stroke();
         context.restore();
     }
@@ -92,18 +78,15 @@
 
         // left eye
         context.beginPath();
-        context.arc(x, y, 25, 0, degreesToRadians(360), true);
-        context.fillStyle = "#FFFFFF";
+        context.moveTo(x1,y1);
+        context.lineTo(x1+5,y1);
+        context.lineTo(x1+5,y1+20);
+        context.lineTo(x1,y1+20);
+        context.fillStyle = "#000";
         context.fill();
         context.strokeStyle = '#000000';
         context.stroke();
         //inner left eye
-        context.beginPath();
-        context.arc(x1, y1, 20, 0, degreesToRadians(360), true);
-        context.fillStyle = "blue";
-        context.fill();
-        context.strokeStyle = 'blue';
-        context.stroke();
     }
 
     function drawRightEye(dx, dy) {
@@ -118,42 +101,13 @@
 
         // right eye
         context.beginPath();
-        context.arc(x, y, 25, 0, degreesToRadians(360), true);
-        context.fillStyle = "#FFFFFF";
+        context.moveTo(x1,y1);
+        context.lineTo(x1-5,y1);
+        context.lineTo(x1-5,y1+20);
+        context.lineTo(x1,y1+20);
+        context.fillStyle = "#000";
         context.fill();
         context.strokeStyle = '#000000';
-        context.stroke();
-        //inner right eye
-        context.beginPath();
-        context.arc(x1, y1, 20, 0, degreesToRadians(360), true);
-        context.fillStyle = "blue";
-        context.fill();
-        context.strokeStyle = 'blue';
-        context.stroke();
-    }
-    function drawSmile() {
-        // start angle is to the right of the center point. So to draw a
-        // semi-circle that's open at the top, like for the mouth in a
-        // smile, you need to draw in a clockwise direction.
-        // angle is the number of degrees we take off the edges of the
-        // semi circle to give a more realistic mouth look.
-        context.strokeStyle = 'red';
-        context.fillStyle = "pink";
-        context.beginPath();
-        context.arc(300,300,100,degreesToRadians(30),degreesToRadians(150),false);
-        context.lineWidth=5;
-        context.closePath();
-        context.fill();
-        //context.arc(300, 350, 75, degreesToRadians(0), degreesToRadians(180), false);
-        context.stroke();
-
-    }
-    function drawhhh(){
-        context.beginPath();
-        context.moveTo(210,350);
-        context.lineTo(390,350);
-        context.strokeStyle='pink';
-        context.lineWidth=6;
         context.stroke();
     }
     function getMousePos(canvas, evt) {
@@ -201,12 +155,9 @@
             rdx = (rdx * 5) / 100;
             rdx = 0 - rdx;
         }
-        drawSmile();
-        drawhhh();
         drawFace();
         drawLeftEye(ldx, ldy);
         drawRightEye(rdx, ldy);
-
     }, false);
 
     canvas.addEventListener('mousedown', function(evt){
@@ -214,11 +165,10 @@
         drawFace();
         drawLeftEye();
         drawRightEye();
-        drawNose();
-        context.strokeStyle = 'red';
-        context.fillStyle = "red";
+        context.strokeStyle = 'black';
+        context.fillStyle = "black";
         context.beginPath();
-        context.arc(300, 350, 75, degreesToRadians(0), degreesToRadians(180), false);
+        context.arc(300, 300, 100, degreesToRadians(30), degreesToRadians(150), false);
         context.stroke();
     }, false);
 
