this is much useful than the fucking canvas

--- a/myhome.html
+++ b/myhome.html
@@ -84,11 +84,11 @@
     <!--list end-->
 </div>
     <!--Favourite page button-->
-    <div class="wow favbutton jelly" onclick="favpage('http://ow.blizzard.cn')" data-wow-delay="0.4s">
+    <div class="wow favbutton jelly" onclick="favpage('http://ow.blizzard.cn')" data-wow-delay="1s" data-wow-duration="0.5s">
         Favourite Website 1: OverWatch
     </div>
     <!--Another Favourite page button-->
-    <div class="wow favbutton1 shake" onclick="favpage('http://bilibili.com')" data-wow-delay="1s" data-wow-duration="0.8s">
+    <div class="wow favbutton1 shake" onclick="favpage('http://bilibili.com')" data-wow-delay="1.5s" data-wow-duration="0.8s">
         Favourite Website 2: Bilibili
     </div>
 </div>
