--- a/regexp/index.html
+++ b/regexp/index.html
@@ -23,23 +23,23 @@
             <div class="form-group" id="mailgroup">
                 <label for="email" class="control-label">Email Address</label>
                 <input type="email" class="form-control" id="email" placeholder="Please input Email Address" name="email" required onblur="mailerr(this)" onfocus="resetit('#emailerr','#mailgroup')">
+                <div class="errormsg" id="emailerr"></div>
             </div>
-            <div class="errormsg" id="emailerr"></div>
-            <div class="form-group">
+            <div class="form-group" id="nicknamegroup">
                 <label for="nickname" class="control-label">Nickname</label>
                 <input type="text" class="form-control" id="nickname" placeholder="Please input your nickname" name="nickname" required>
+                <div class="errormsg" id="nicknameerr"></div>
             </div>
-            <div class="errormsg" id="nicknameerr"></div>
-            <div class="form-group">
+            <div class="form-group" id="passgroup">
                 <label for="password" class="control-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Please input password" name="password" required>
+                <input type="password" class="form-control" id="password" placeholder="Please input password" name="password" required  onblur="passworderr(this)" onfocus="resetit('#passerr','#passgroup')">
+                <div class="errormsg" id="passerr"></div>
             </div>
-            <div class="errormsg" id="passerr"></div>
-            <div class="form-group">
+            <div class="form-group" id="confirmgroup">
                 <label for="confirmpass" class="control-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirmpass" placeholder="Please input your password again" required>
+                <input type="password" class="form-control" id="confirmpass" placeholder="Please input your password again" required onblur="confirmit(this)" onfocus="resetit('#confirmerr','#confirmgroup')">
+                <div class="errormsg" id="confirmerr"></div>
             </div>
-            <div class="errormsg" id="confirmerr"></div>
             <label>Gender</label><br/>
             <label class="radio-inline">
                 <input type="radio" name="gender" id="male" value="male" required> Male
