--- a/regexp/index.html
+++ b/regexp/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group" id="nicknamegroup">
                 <label for="nickname" class="control-label">Nickname</label>
-                <input type="text" class="form-control" id="nickname" placeholder="Please input your nickname" name="nickname" required>
+                <input type="text" class="form-control" id="nickname" placeholder="Please input your nickname" name="nickname" required onblur="nicknamerr(this)" onfocus="resetit('#nicknameerr','#nicknamegroup')">
                 <div class="errormsg" id="nicknameerr"></div>
             </div>
             <div class="form-group" id="passgroup">
