--- a/test2/index.html
+++ b/test2/index.html
@@ -48,7 +48,7 @@
             <div class="errormsg" id="addresserr"></div>
         </div>
         <div class="form-group" id="phone">
-            <label for="phoneinput" class="control-label">Ceil Phone:</label>
+            <label for="phoneinput" class="control-label">Cell Phone:</label>
             <input type="text" class="form-control" id="phoneinput" required onblur="checkphone()" onfocus="resetit('#phoneerr','#phone')">
             <div class="errormsg" id="phoneerr"></div>
         </div>
