--- a/test2/index.html
+++ b/test2/index.html
@@ -21,15 +21,15 @@
 </head>
 <body>
 <div class="container">
-    <form action="">
+    <form action="result.php" method="post">
         <div class="form-group" id="id">
             <label for="idinput" class="control-label">ID:</label>
-            <input type="text" class="form-control has-error" id="idinput" required onblur="checkid()" onfocus="resetit('#iderr','#id')">
+            <input type="text" class="form-control has-error" id="idinput" name="id" required onblur="checkid()" onfocus="resetit('#iderr','#id')">
             <div class="errormsg" id="iderr"></div>
         </div>
         <div class="form-group" id="name">
             <label for="nameinput" class="control-label">Name:</label>
-            <input type="text" class="form-control" id="nameinput" required onblur="checkname()" onfocus="resetit('#nameerr','#name')">
+            <input type="text" class="form-control" id="nameinput" name="name" required onblur="checkname()" onfocus="resetit('#nameerr','#name')">
             <div class="errormsg" id="nameerr"></div>
         </div>
         <div class="form-group" id="pass">
@@ -44,25 +44,25 @@
         </div>
         <div class="form-group" id="address">
             <label for="addressinput" class="control-label">Address:</label>
-            <input type="text" class="form-control" id="addressinput" required onblur="checkaddress()" onfocus="resetit('#addresserr','#address')">
+            <input type="text" class="form-control" id="addressinput" name="address" required onblur="checkaddress()" onfocus="resetit('#addresserr','#address')">
             <div class="errormsg" id="addresserr"></div>
         </div>
         <div class="form-group" id="phone">
             <label for="phoneinput" class="control-label">Cell Phone:</label>
-            <input type="text" class="form-control" id="phoneinput" required onblur="checkphone()" onfocus="resetit('#phoneerr','#phone')">
+            <input type="text" class="form-control" id="phoneinput" name="phone" required onblur="checkphone()" onfocus="resetit('#phoneerr','#phone')">
             <div class="errormsg" id="phoneerr"></div>
         </div>
         <div class="form-inline" id="adult">
             <label for="phoneinput" class="control-label">Adults in family: &nbsp;&nbsp;&nbsp;&nbsp;</label>
             <button class="btn btn-default" onclick="addminus(false)" type="button">-</button>
-            <input type="text" class="form-control" id="adultnum" disabled>
+            <input type="text" class="form-control" id="adultnum" disabled name="adult">
             <button class="btn btn-default" onclick="addminus(true)" type="button">+</button>
             <button class="btn btn-default" type="button" onclick="showChild()">Children</button>
         </div>
         <br/>
         <div class="form-inline" id="children">
             <label for="childrenselect" class="control-label">No. of Children: &nbsp;&nbsp;&nbsp;&nbsp;</label>
-            <select name="" class="form-control" id="childrenselect" required>
+            <select name="child" class="form-control" id="childrenselect" required>
                 <option value="0">0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -82,7 +82,7 @@
             <input type="checkbox" name="hobby" value="dancing">Dancing
         </fieldset>
         <br/>
-        <button type="button" class="btn btn-primary" onclick="infos()">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 </body>
