--- a/test2/index.html
+++ b/test2/index.html
@@ -55,7 +55,7 @@
         <div class="form-inline" id="adult">
             <label for="phoneinput" class="control-label">Adults in family: &nbsp;&nbsp;&nbsp;&nbsp;</label>
             <button class="btn btn-default" onclick="addminus(false)" type="button">-</button>
-            <input type="text" class="form-control" id="adultnum" disabled name="adult">
+            <input type="text" class="form-control" id="adultnum" readonly name="adult">
             <button class="btn btn-default" onclick="addminus(true)" type="button">+</button>
             <button class="btn btn-default" type="button" onclick="showChild()">Children</button>
         </div>
