--- a/test2/index.html
+++ b/test2/index.html
@@ -78,8 +78,8 @@
         <br/>
         <fieldset>
             <legend>Hobbies</legend>
-            <input type="checkbox" name="hobby" value="singing">Singing
-            <input type="checkbox" name="hobby" value="dancing">Dancing
+            <input type="checkbox" name="hobby[]" value="singing">Singing
+            <input type="checkbox" name="hobby[]" value="dancing">Dancing
         </fieldset>
         <br/>
         <button type="submit" class="btn btn-primary">Submit</button>
