--- a/test2/index.html
+++ b/test2/index.html
@@ -78,8 +78,9 @@
         <br/>
         <fieldset>
             <legend>Hobbies</legend>
-            <input type="checkbox" name="hobby[]" value="singing">Singing
-            <input type="checkbox" name="hobby[]" value="dancing">Dancing
+            <input type="checkbox" name="hobby[]" value="Singing">Singing
+            <input type="checkbox" name="hobby[]" value="Dancing">Dancing
+            <input type="checkbox" name="hobbby[]" value="Programming">Programming
         </fieldset>
         <br/>
         <button type="submit" class="btn btn-primary">Submit</button>
