--- a/test2/index.html
+++ b/test2/index.html
@@ -80,7 +80,7 @@
             <legend>Hobbies</legend>
             <input type="checkbox" name="hobby[]" value="Singing">Singing
             <input type="checkbox" name="hobby[]" value="Dancing">Dancing
-            <input type="checkbox" name="hobbby[]" value="Programming">Programming
+            <input type="checkbox" name="hobby[]" value="Programming">Programming
         </fieldset>
         <br/>
         <button type="submit" class="btn btn-primary">Submit</button>
