add link in myhome

--- a/myhome.html
+++ b/myhome.html
@@ -144,6 +144,9 @@
 <div class="wow bottombutton login flowup" onclick="window.location.href='regexp/'">
     Login(regexp)
 </div>
+<div class="wow bottombutton pt2 flowup" onclick="window.location.href='test2/'">
+    Pratical Test 2
+</div>
 <div id="footer" class="wow textcenter flowup">
     © Deng Renjie All Rights Reserved
 </div>
