--- a/test2/index.html
+++ b/test2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="https://ols1alctg.qnssl.com/bootstrap.min.css">
     <script src="form.js"></script>
     <script src="jquery-3.2.0.min.js"></script>
