--- a/test2/index.html
+++ b/test2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="https://ols1alctg.qnssl.com/bootstrap.min.css">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="form.js"></script>
     <script src="jquery-3.2.0.min.js"></script>
     <style>
