--- a/regexp/index.html
+++ b/regexp/index.html
@@ -5,7 +5,7 @@
     <title>乎U Sign Up</title>
     <script src="regexp.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://ols1alctg.qnssl.com/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.drjchn.com/bootstrap.min.css">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,width=device-width,user-scalable=no">
     <script src="jquery-3.2.0.min.js"></script>
     <style>
